--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
-apply plugin: 'maven'
+
+apply from: 'gradle/coverage.gradle'
 
 group = 'com.hughes.util'
 version = '1.0.0-SNAPSHOT'
@@ -8,16 +9,15 @@ description = """Utilities"""
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-
-
 repositories {
-        
-     maven { url "https://repo.maven.apache.org/maven2" }
+     mavenCentral()
 }
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version:'4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
